<resources>
    <!--Start of strings needed for chat feature-->
    <string name="app_name">AlertMe</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">SIGN IN</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <!-- end of strings needed for chat feature-->

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Start of navigation menu-->
    <string name="chat">Chat</string>
    <string name="map">View Friends </string>
    <string name="settings">Settings</string>
    <string name="help_and_support">Help and Support</string>
    <string name="log_out">Log Out</string>
    <!--End of navigation menu-->

</resources>
