<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_chat"
        android:title="@string/chat"
        android:icon="@mipmap/baseline_message_black_24dp" />
    <item
        android:id="@+id/nav_map"
        android:title="@string/map"
        android:icon="@mipmap/baseline_near_me_black_24dp" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@mipmap/baseline_settings_black_24dp" />
    <item
        android:id="@+id/nav_help"
        android:title="@string/help_and_support"
        android:icon="@mipmap/baseline_live_help_black_24dp" />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/log_out"
        android:icon="@mipmap/baseline_exit_to_app_black_18dp" />
</menu>